<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints="yes"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameEditText" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="96dp"
        android:autofillHints="no"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:autofillHints="no"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/email"
        app:layout_constraintEnd_toStartOf="@+id/editEmailAddress"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/password"
        app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/NameEditText"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NameEditText"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="96dp"
        android:autofillHints="yes"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Confirm_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/confirm_password"
        app:layout_constraintEnd_toStartOf="@+id/editTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword2" />

    <TextView
        android:id="@+id/Name_error"
        android:layout_width="64dp"
        android:layout_height="43dp"
        android:layout_marginTop="104dp"
        android:text="@string/txtNameError"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/NameEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Email_error"
        android:layout_width="70dp"
        android:layout_height="43dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtEmailError"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/editEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/Name_error" />

    <TextView
        android:id="@+id/Password_error"
        android:layout_width="71dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtPasswordError"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/Email_error" />

    <TextView
        android:id="@+id/Confirm_Password_error"
        android:layout_width="73dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtConfirmError"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/editTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/Password_error" />

</androidx.constraintlayout.widget.ConstraintLayout>